--- a/views/copies/movie_index.ejs
+++ b/views/copies/movie_index.ejs
@@ -59,51 +59,6 @@
         padding: 2%;
     }
 
-/*    #section{
-        width: 100%;
-        height: 800px;
-    }
-
-
-    #button{
-        width: 100%;
-        height: 60px;
-        float: left;
-        margin-left: 10%;
-        margin-top: 20%;
-    }
-
-
-
-    #next{}
-
-    #card{
-        margin: 0 auto;
-        text-align: center;
-        width: 65%;
-        height: 700px;
-        background-color: red;
-    }
-
-    #poster{
-        display: inline-block;
-
-    }
-
-
-    #info{
-        height: 600px;
-        width: 500px;
-        text-align: left;
-        display: inline-block;
-    }
-
-    img{
-        height: 80%;
-        border: 10px solid black;
-    }
-*/
-
 
     </style>
 </head>
@@ -137,7 +92,7 @@
         "Inglorious Bastards", "Indiana Jones and the Last Crusade", "Lock, Stock and Two Smoking Barrels",
         "Jurassic Park", "Fargo", "Trainspotting", "Toy Story", "Y Tu Mamá También"]
         
-
+        //this will go though all the functions
         var next_button = document.getElementById('next');
         var i = 0;
 
